fix: labels in #Buffs
Ensure that all labels can be read without overflowing the height or scaling out of view.

--- a/src/css/betterbuffsbar.css
+++ b/src/css/betterbuffsbar.css
@@ -388,6 +388,11 @@ body {
   padding: 4px;
 }
 
+#BetterBuffsBar.show-labels #Buffs {
+  max-height: 100% !important;
+  transform: scale(1) !important;
+}
+
 #BetterBuffsBar:not(.show-labels) #Buffs .buff-name,
 #BetterBuffsBar:not(.show-labels) #UntrackedBuffs .buff-name {
   display: none;
